# sv-extractor

./: Cargo.toml  readme.md
src/: converter.rs  hdl_info.rs  main.rs  sv_parse.rs
tests/sv/: ansi_port_module.sv  basic_module.sv  module_with_inout.sv
