[package]
name = "sv-extractor"
version = "0.1.0"
edition = "2024"

[dependencies]
sv-parser = "0.13.4"
clap = { version = "4", features = ["derive"] }
regex = "1.12.2"
lazy_static = "1.4.0"
rhai = "1.24.0"
serde = { version = "1.0", features = ["derive"] } # derive 宏是必须的
serde_json = "1.0"
indoc = "2"
